<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        app:layout_behavior="@string/behavior_footer"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rg"
            android:background="@color/waveviewforegroundcolor"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_recommend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/rec_selector"
                android:gravity="center"
                android:text="@string/recommend"
                android:textColor="@color/selector_radiobutton" />
            <RadioButton
                android:id="@+id/rb_boutique"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bou_selector"
                android:gravity="center"
                android:text="@string/boutique"
                android:textColor="@color/selector_radiobutton" />
            <RadioButton
                android:id="@+id/rb_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/game_selector"
                android:gravity="center"
                android:text="@string/game"
                android:textColor="@color/selector_radiobutton" />
            <RadioButton
                android:id="@+id/rb_mine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/mine_selector"
                android:gravity="center"
                android:text="@string/myshelf"
                android:textColor="@color/selector_radiobutton" />
        </RadioGroup>
        <View android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#7c7b7b"/>
    </RelativeLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="80dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:src="@mipmap/fab"-->
        <!--app:backgroundTint="#ff87ffeb" />-->

    <!--<ImageView-->
        <!--android:visibility="invisible"-->
        <!--android:id="@+id/iv1"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="100dp"-->
        <!--android:layout_marginRight="40dp"-->
        <!--android:src="@mipmap/fab_rec" />-->

    <!--<ImageView-->
        <!--android:visibility="invisible"-->
        <!--android:id="@+id/iv2"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="100dp"-->
        <!--android:layout_marginRight="40dp"-->
        <!--android:src="@mipmap/fab_honver" />-->

    <!--<ImageView-->
    <!--android:visibility="invisible"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:id="@+id/iv3"-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="bottom|right"-->
    <!--android:layout_marginBottom="100dp"-->
    <!--android:layout_marginRight="40dp"-->
    <!--android:src="@mipmap/fab_game" />-->

    <!--<ImageView-->
        <!--android:visibility="invisible"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:id="@+id/iv4"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="100dp"-->
        <!--android:layout_marginRight="40dp"-->
        <!--android:src="@mipmap/fab_mine" />-->
</android.support.design.widget.CoordinatorLayout>
